[package]
name = "passwordEncryption"
version = "0.1.1"
edition = "2021"
authors = ["zhuyu12246"]
description = "一个安全的密码哈希库，使用 Argon2 算法保护用户密码"
license = "MIT"
repository = "https://github.com/zhuyu12246/passwordEncryption"
documentation = "https://docs.rs/passwordEncryption"
readme = "README.md"
keywords = ["password", "hash", "argon2", "security", "encryption"]
categories = ["cryptography", "authentication"]

[dependencies]
# Argon2 密码哈希算法实现
argon2 = "0.5"
# 用于生成加密安全的随机数
rand = "0.8"
# 用于简化错误处理的宏
thiserror = "1.0"

[[bin]]
name = "passwordEncryption"
path = "src/main.rs"